# extremely-simple-ad-api-with-actix

./: README.md  docker-compose.dev.yml  docker-compose.yml
app/: Cargo.toml  Dockerfile
app/src/: main.rs
db/: Dockerfile  redis.conf
