[package]
name = "extremely-simple-ad-api-with-actix"
version = "0.1.0"
authors = ["sankaku <sankaku.git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
redis = "0.20.0"
bb8 = "0.7.0"
bb8-redis = "0.9.0"
